--- a/css/wall.css
+++ b/css/wall.css
@@ -583,6 +583,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    transition: 0.2s;
 }
 
 .wall-filter svg {
@@ -598,6 +599,10 @@
 
 .wall-filter.show {
     box-shadow: var(--shadow-popup);
+}
+
+.wall-filter.show div {
+    gap: 0.7rem;
 }
 
 .wall-filter.show svg {
