--- a/css/people.css
+++ b/css/people.css
@@ -38,7 +38,7 @@
     --error-accent-color: #FF220C;
     --block-accent-color-110: #E6E6E6;
     --block-accent-color-06: #02020206;
-    --block-accent-color-210: #02020210;
+    --block-accent-color-210: #00663310;
     --like-button-accent-color: #FF220C10;
     --shadow-big: 0 0 15px #02020207;
     --shadow-small: 0 0 12px #02020205;
@@ -118,20 +118,23 @@
     margin: 0;
 }
 
+.people { 
+    display: none;
+}
+
 .people__users {
     width: 100%;
     box-shadow: var(--shadow-small);
     border-radius: 2rem;
-    display: flex;
     flex-direction: column;
     position: relative;
-    margin-top: 1.6rem;
 }
 
 .people__users ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    margin-top: 1.6rem;
 }
 
 .user {
@@ -526,9 +529,6 @@
 }
 
 .people__top-users {
-    background-color: var(--block-color);
-    margin-top: 2.6rem;
-    border-radius: 2rem;
     cursor: pointer;
 }
 
@@ -548,6 +548,265 @@
 
 .people__top-users .top-title:hover svg {
     margin-right: 0;
+}
+
+.people-filter-div {
+    position: relative;
+    width: 100%;
+    display: block;
+    min-width: 13.935rem;
+}
+
+.people-filter {
+    background-color: var(--block-color);
+    padding: 2.1rem 2.6rem;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    transition: 0.2s;
+    z-index: 9;
+    border-radius: 2rem;
+    color: var(--main-accent-color);
+}
+
+.people-filter div {
+    font-size: var(--font-size-1);
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    transition: 0.2s;
+}
+
+.people-filter svg {
+    fill: var(--main-accent-color);
+    min-height: 10px;
+    max-height: 10px;
+    transition: 0.2s;
+}
+
+#active.show {
+    padding-bottom: calc(12.9rem - 6.2rem);
+}
+
+.people-filter.show {
+    box-shadow: var(--shadow-popup);
+}
+
+.people-filter.show div {
+    gap: 0.7rem;
+}
+
+.people-filter.show svg {
+    transform: rotate(90deg);
+}
+
+.people-filter-popup {
+    font-size: var(--font-size-1);
+    border-radius: 1.73rem;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    visibility: hidden;
+    z-index: 8;
+    background-color: var(--block-color);
+    overflow: hidden;
+    animation: hidePopupFilter 0.2s;
+}
+
+.people-filter-popup.show {
+    animation: showPopupFilter 0.2s;
+    visibility: visible;
+}
+
+@keyframes showPopupFilter {
+    from {
+        opacity: 0;
+        transform: translate(0%, -100%);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+}
+
+@keyframes hidePopupFilter {
+    from {
+        transform: translate(0, 0);
+        opacity: 1;
+    }
+
+    to {
+        transform: translate(0%, -100%);
+        opacity: 0;
+    }
+}
+
+.people-filter-popup-li {
+    display: block;
+    width: 100%;
+    padding: 1rem 2.6rem;
+    text-transform: none;
+    color: var(--main-text-color);
+    background-color: var(--block-color);
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.people-filter-popup-li:hover {
+    background-color: var(--block-accent-color-06);
+}
+
+
+.people-filter-popup-li:first-child {
+    padding-top: 7.2rem;
+}
+
+.people-filter-popup-li:last-child {
+    padding-bottom: 1rem;
+}
+
+.people-filter-popup-li input[type='radio'] {
+    display: none;
+}
+
+.people-filter-popup-li:has([type='radio']:checked) {
+    color: var(--main-accent-color);
+    background-color: var(--block-accent-color-210);
+}
+
+.first-part:has(#people-filter-all:checked)+.second-and-third-parts #users-filter-all,
+.first-part:has(#people-filter-top:checked)+.second-and-third-parts #users-filter-top {
+    display: block;
+}
+
+.people-filter-mobile {
+    align-items: center;
+    position: relative;
+    display: none;
+    border-radius: 2rem;
+    overflow: hidden;
+    margin-top: 2.6rem;
+    cursor: pointer;
+    max-width: max-content;
+    box-shadow: var(--shadow-small);
+    transition: 0.2s;
+}
+
+.people-filter-mobile.show {
+    padding-right: 19.7534rem;
+}
+
+.people-filter-mobile .people-filter-mobile-info {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    color: var(--main-accent-color);
+    z-index: 12;
+    background-color: var(--block-color);
+    padding: 1rem 2.6rem;
+    border-radius: 2rem;
+    transition: 0.2s;
+}
+
+.people-filter-mobile .people-filter-mobile-info:hover {
+    gap: 1.2rem;
+}
+
+.people-filter-mobile .people-filter-mobile-info.show {
+    gap: 1.2rem;
+    box-shadow: var(--shadow-popup);
+}
+
+.people-filter-mobile .div-line {
+    height: 4rem;
+    width: 1px;
+}
+
+.people-filter-mobile svg {
+    fill: var(--main-accent-color);
+}
+
+.people-filter-popup-mobile {
+    position: absolute;
+    display: flex;
+    background-color: var(--block-color);
+    border-radius: 2rem;
+    overflow: hidden;
+    z-index: 11;
+    visibility: hidden;
+    animation: hidePopupWallFilterMobile 0.2s;
+}
+
+.people-filter-popup-mobile.show {
+    animation: showPopupWallFilterMobile 0.2s;
+    visibility: visible;
+}
+
+@keyframes showPopupWallFilterMobile {
+    from {
+        opacity: 0;
+        transform: translate(-100%, 0%);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+}
+
+@keyframes hidePopupWallFilterMobile {
+    from {
+        transform: translate(0, 0);
+        opacity: 1;
+    }
+
+    to {
+        transform: translate(-100%, 0);
+        opacity: 0;
+    }
+}
+
+.people-filter-popup-li-mobile {
+    display: block;
+    width: 100%;
+    padding: 0 2.6rem;
+    line-height: 4rem;
+    text-transform: none;
+    cursor: pointer;
+    transition: 0.2s;
+    display: flex;
+    justify-content: center;
+    min-height: 4rem;
+    color: var(--else-text-color-50);
+}
+
+.people-filter-popup-li-mobile:first-child {
+    padding-left: calc(10.8733rem + 1.6rem);
+}
+
+.people-filter-popup-mobile.friends .people-filter-popup-li-mobile:first-child {
+    padding-left: calc(14.2817rem + 1.6rem);
+}
+
+.people-filter-popup-li-mobile:hover {
+    background-color: var(--block-accent-color-06);
+}
+
+.people-filter-popup-li-mobile input[type='radio'] {
+    display: none;
+}
+
+.people-filter-popup-li-mobile:has([type='radio']:checked) {
+    color: var(--main-accent-color);
+    background-color: var(--block-accent-color-210);
 }
 
 @media (max-width: 1320px) {
