--- a/css/people.css
+++ b/css/people.css
@@ -694,7 +694,7 @@
     display: none;
     border-radius: 2rem;
     overflow: hidden;
-    margin-top: 2.6rem;
+    margin-bottom: 2.6rem;
     cursor: pointer;
     max-width: max-content;
     box-shadow: var(--shadow-small);
@@ -702,7 +702,7 @@
 }
 
 .people-filter-mobile.show {
-    padding-right: 19.7534rem;
+    padding-right: 20.7316rem;
 }
 
 .people-filter-mobile .people-filter-mobile-info {
@@ -790,11 +790,11 @@
 }
 
 .people-filter-popup-li-mobile:first-child {
-    padding-left: calc(10.8733rem + 1.6rem);
+    padding-left: calc(14.9217rem + 1.6rem);
 }
 
-.people-filter-popup-mobile.friends .people-filter-popup-li-mobile:first-child {
-    padding-left: calc(14.2817rem + 1.6rem);
+.people-filter-popup-mobile.all .people-filter-popup-li-mobile:first-child {
+    padding-left: calc(10.8733rem + 1.6rem);
 }
 
 .people-filter-popup-li-mobile:hover {
@@ -819,6 +819,29 @@
     -webkit-text-fill-color: transparent;
 }
 
+.blossom-status-mobile {
+    align-items: center;
+    margin-left: auto;
+    gap: 0.625rem;
+    display: none;
+}
+
+.user .blossom-status-mobile span {
+    font-weight: 620;
+    background: linear-gradient(-135deg, var(--posts-color), var(--likes-color), var(--comments-color));
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.user .blossom-status-mobile img {
+    border-radius: 0;
+    max-width: 24px;
+    max-height: 24px;
+    min-height: 24px;
+    min-width: 24px;
+}
+
 .counter-top {
     display: flex;
     align-items: center;
@@ -839,6 +862,10 @@
     main {
         padding: 0;
     }
+
+    .blossom-status {
+        font-size: var(--font-size-1);
+    }
 }
 
 @media (max-width: 820px) {
@@ -854,6 +881,20 @@
     .friends__users {
         min-height: calc(100vh - 7.2rem*2 - 2.6rem*2);
     }
+
+    .people-filter-mobile {
+        display: flex;
+    }
+
+    .first-part:has(#people-filter-all:checked)+.second-and-third-parts #users-filter-all,
+    .first-part:has(#people-filter-top:checked)+.second-and-third-parts #users-filter-top {
+        display: none;
+    }
+
+    .second-and-third-parts .second-part:has(#people-filter-all-mobile:checked) #users-filter-all,
+    .second-and-third-parts .second-part:has(#people-filter-top-mobile:checked) #users-filter-top {
+        display: block;
+    }    
 }
 
 @media (max-width: 720px) {
@@ -891,16 +932,71 @@
         max-width: 24px;
         min-width: 24px;
     }
+
+    .people-filter-mobile svg {
+        max-height: 10px;
+        min-height: 10px;
+    }
+
+    .people-filter-mobile.show {
+        padding-right: 18.4934rem;
+    }
+
+    .people-filter-popup-li-mobile:first-child {
+        padding-left: calc(13.3833rem + 1.6rem);
+    }
+
+    .people-filter-popup-mobile.all .people-filter-popup-li-mobile:first-child {
+        padding-left: calc(10.1417rem + 1.6rem);
+    }
+
+    .people__top-users .user svg {
+        max-width: 24px;
+        max-height: 24px;
+    }
+    
+    .counter-top {
+        max-width: 24px;
+        min-width: 24px;
+        max-height: 24px;
+        min-height: 24px;
+    }   
 }
 
 @media (max-width: 580px) {
     .profile__user-info .answer-to-request-div {
         margin-top: 1.6rem;
     }
+
+    .user {
+        gap: 1rem;
+    }
+
+    .people__top-users .user svg {
+        position: absolute;
+        top: 1.1rem;
+        left: 2.1rem;
+    }
+
+    .people__top-users .user:first-child svg {
+        top: 2.1rem;
+    }
+
+    .counter-top {
+        display: none;
+    }
 }
 
 @media (max-width: 480px) {
     .wrapper {
         max-width: calc(100% - 3.2rem);
+    }
+
+    .blossom-status {
+        display: none;
+    }
+
+    .blossom-status-mobile {
+        display: flex;
     }
 }
