--- a/css/profile.css
+++ b/css/profile.css
@@ -675,6 +675,10 @@
     color: var(--else-text-color-50);
 }
 
+.second-part .case {
+    display: none;
+}
+
 .blossom-level .progress-div {
     position: relative;
     display: flex;
@@ -781,7 +785,7 @@
     margin-top: 2.6rem;
 }
 
-.user__blossom .blossom-description {
+.user__blossom .blossom-description, .user__case .case-description {
     font-size: var(--font-size-2);
     color: var(--else-text-color-50);
     font-weight: 400;
@@ -909,10 +913,12 @@
 }
 
 .case .case-trophies {
-    margin-top: 1.6rem;
+    display: flex;
+    gap: 1rem;
 }
 
 .case .case-trophies .trophy {
+    margin-top: 1.6rem;
     position: relative;
     max-width: max-content;
 }
@@ -938,6 +944,8 @@
     pointer-events: none;
     opacity: 0;
     transition: 0.2s;
+    font-size: var(--font-size-1);
+    color: var(--else-text-color-50);
 }
 
 .case-trophies .trophy span::before {
@@ -954,6 +962,55 @@
     opacity: 1;
 }
 
+.current-user-case {
+    margin-top: 1.6rem;
+    display: flex;
+    gap: 1.6rem;
+    flex-wrap: wrap;
+}
+
+.current-user-case .trophy {
+    background-color: var(--block-color);
+    box-shadow: var(--shadow-small);
+    padding: 2.6rem;
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.current-user-case .trophy:hover {
+    transform: scale(105%);
+}
+
+
+.current-user-case .trophy img {
+    max-width: 75px;
+    max-height: 75px;
+    min-height: 75px;
+    min-width: 75px;
+}
+
+.current-user-case .trophy p:nth-child(2) {
+    font-weight: 620;
+    margin-top: 1.6rem;
+}
+
+.current-user-case .trophy p:nth-child(3) {
+    margin-top: 0.625rem;
+    font-size: var(--font-size-1);
+    text-transform: lowercase;
+}
+
+.current-user-case .trophy span {
+    font-size: var(--font-size-1);
+    color: var(--else-text-color-50);
+    text-transform: lowercase;
+    margin-top: 1rem;
+}
+
 @media (max-width: 1320px) {
     .third-part-mobile {
         display: block;
@@ -964,6 +1021,10 @@
     }
 
     .second-part .blossom-level {
+        display: block;
+    }
+
+    .second-part .case {
         display: block;
     }
 }
